force-app/main/default/objects/ApplicationReview/fields/Discrepancy_Detected__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discrepancy Detected</label>
    <type>Checkbox</type>
</CustomField>