force-app/main/default/objects/ApplicationReview/fields/Discrepancy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Notes__c</fullName>
    <label>Discrepancy Notes</label>
    <type>TextArea</type>
</CustomField>