force-app/main/default/objects/ApplicationReview/fields/External_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>External_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Reviewer</label>
    <referenceTo>External_Reviewer__c</referenceTo>
    <relationshipLabel>Application Reviews (External Reviewer)</relationshipLabel>
    <relationshipName>Application_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>