force-app/main/default/objects/ApplicationReview/fields/Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Review_Form__c</fullName>
    <label>Review Form</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>