force-app/main/default/objects/ApplicationReview/fields/Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Submission_Id__c</fullName>
    <formula>Application.Submittable_Submission_Id__c</formula>
    <label>Submission Id</label>
    <type>Text</type>
</CustomField>