force-app/main/default/objects/ApplicationReview/fields/Submittable_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Entry_Id__c</fullName>
    <label>Submittable Entry Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>