force-app/main/default/objects/ApplicationReview/fields/Submittable_Review_Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Review_Stage_Id__c</fullName>
    <label>Submittable Review Stage Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>