force-app/main/default/objects/ApplicationReview/validationRules/Add_Discrepancy_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Discrepancy_Notes</fullName>
    <active>true</active>
    <description>To show validation error message when the user attempts to save the record without adding discrepancy comments when the Discrepancy detected checkbox is checked</description>
    <errorConditionFormula>AND(
    Discrepancy_Detected__c = TRUE,
    ISBLANK(Discrepancy_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Discrepancy_Notes__c</errorDisplayField>
    <errorMessage>Please provide the discrepancy comments</errorMessage>
</ValidationRule>